# DaD-Beast

./: .gitignore  .gitmodules  ARCHITECTURE.md  DEPLOYMENT_GUIDE.md  FEATURE_COMPARISON.md  FINAL_SUMMARY.md  IMPLEMENTATION_COMPLETE.md  README.md  RECOMMENDATIONS.md  ROADMAP.md
.github/: CICD_SETUP.md  (+1 more)
tracker-platform/: .dockerignore  .env.example  Cargo.toml  Dockerfile  LICENSE  Makefile  README.md  TESTING.md  docker-compose.yml
tracker-platform/.cargo/: config.toml
tracker-platform/.github/workflows/: tests.yml
tracker-platform/app/: Cargo.toml
tracker-platform/app/src/: config.rs  main.rs  middleware.rs  routes.rs  shutdown.rs  state.rs  telemetry.rs
tracker-platform/config/: prometheus.yml
tracker-platform/config/grafana/dashboards/: dashboard.yml
tracker-platform/crates/api/: Cargo.toml  README.md
tracker-platform/crates/api/src/: lib.rs  openapi.rs  rate_limit.rs  webhooks.rs
tracker-platform/crates/api/src/graphql/: mod.rs  mutations.rs  queries.rs  schema.rs  subscriptions.rs  types.rs
tracker-platform/crates/api/src/rest/: mod.rs  torrents.rs  users.rs
tracker-platform/crates/auth/: Cargo.toml
tracker-platform/crates/auth/src/: jwt.rs  lib.rs  login.rs  middleware.rs  password.rs  password_tests.rs  permissions.rs  register.rs  session.rs  two_factor.rs
tracker-platform/crates/community/: Cargo.toml
tracker-platform/crates/community/src/: chat.rs  events.rs  forums.rs  lib.rs  messaging.rs  polls.rs  posts.rs  topics.rs  wiki.rs
tracker-platform/crates/media/: Cargo.toml
tracker-platform/crates/media/src/: cache.rs  detector.rs  enricher.rs  igdb.rs  imdb.rs  lib.rs  mal.rs  musicbrainz.rs  tmdb.rs
tracker-platform/crates/search/: Cargo.toml  IMPLEMENTATION_SUMMARY.md  QUICK_REFERENCE.md  README.md
tracker-platform/crates/search/examples/: basic_usage.rs
tracker-platform/crates/search/migrations/: 001_search_tables.sql
tracker-platform/crates/search/src/: analytics.rs  client.rs  error.rs  facets.rs  filters.rs  indexer.rs  lib.rs  query.rs  schema.rs  suggest.rs
tracker-platform/crates/shared/src/: auth.rs  config.rs  database.rs  error.rs  redis.rs  types.rs  validation.rs
tracker-platform/crates/shared/src/models/: mod.rs
tracker-platform/crates/torrent/: Cargo.toml
tracker-platform/crates/torrent/src/: bencode.rs  download.rs  files.rs  lib.rs  metadata.rs  moderation.rs  requests.rs  search.rs  upload.rs
tracker-platform/crates/tracker/: Cargo.toml
tracker-platform/crates/tracker/src/: announce.rs  batch.rs  peer.rs  protocol.rs  scrape.rs  statistics.rs
tracker-platform/crates/user/: Cargo.toml
tracker-platform/crates/user/src/: achievements.rs  bonus.rs  follow.rs  freeleech.rs  invites.rs  lib.rs  privacy.rs  profile.rs  statistics.rs
tracker-platform/frontend/: .env.example  .gitignore  README.md  package-lock.json  package.json  playwright.config.ts  svelte.config.js  tailwind.config.js  tsconfig.json  vite.config.ts  vitest.config.ts
tracker-platform/frontend/src/: app.css  app.html
tracker-platform/frontend/src/__tests__/: ThemeSwitcher.test.ts  TorrentCard.test.ts  setup.ts  stores.test.ts  utils.test.ts
tracker-platform/frontend/src/lib/components/chat/: ChatMessage.svelte
tracker-platform/frontend/src/lib/graphql/: client.ts  mutations.ts  queries.ts  subscriptions.ts
tracker-platform/frontend/src/lib/stores/: auth.ts  humor.ts  notifications.ts  theme.ts  websocket.ts
tracker-platform/frontend/src/routes/: +layout.svelte  +page.svelte
tracker-platform/frontend/src/routes/chat/: +page.svelte
tracker-platform/frontend/src/routes/forgot-password/: +page.svelte
tracker-platform/frontend/src/routes/forums/: +page.svelte
tracker-platform/frontend/src/routes/login/: +page.svelte
tracker-platform/frontend/src/routes/register/: +page.svelte
tracker-platform/frontend/src/routes/search/: +page.svelte
tracker-platform/frontend/src/routes/stats/: +page.svelte
tracker-platform/frontend/src/routes/torrents/: +page.svelte
tracker-platform/frontend/src/routes/upload/: +page.svelte
tracker-platform/frontend/tests/e2e/: auth.spec.ts  chat.spec.ts  forums.spec.ts  themes.spec.ts  torrents.spec.ts  user.spec.ts
tracker-platform/migrations/: 20250105000000_create_user_groups.sql  20250105000001_create_users.sql  20250105000002_create_user_sessions.sql  20250105000003_create_user_privacy.sql  20250105000004_create_user_statistics.sql  20250105000005_create_user_achievements.sql  20250105000006_create_user_2fa.sql  20250105000007_create_torrent_categories.sql  20250105000008_create_torrents.sql  20250105000009_create_torrent_files.sql  20250105000010_create_torrent_tags.sql  20250105000011_create_torrent_moderation.sql  20250105000012_create_torrent_metadata.sql  20250105000013_create_torrent_requests.sql  20250105000014_create_torrent_collections.sql  20250105000015_create_peers.sql  20250105000016_create_announces.sql  20250105000017_create_peer_history.sql  20250105000018_create_torrent_statistics.sql  20250105000019_create_bonus_rules.sql  20250105000020_create_bonus_transactions.sql  20250105000021_create_freeleech_tokens.sql  20250105000022_create_forums.sql  20250105000023_create_forum_topics.sql  20250105000024_create_forum_posts.sql  20250105000025_create_forum_subscriptions.sql  20250105000026_create_private_messages.sql  20250105000027_create_chat_rooms.sql  20250105000028_create_chat_messages.sql  20250105000029_create_reports.sql  20250105000030_create_warnings.sql  20250105000031_create_bans.sql  20250105000032_create_audit_logs.sql  20250105000033_create_moderation_queue.sql  20250105000034_create_search_index_queue.sql  20250105000035_create_comments.sql  MIGRATION_INDEX.md  README.md  SCHEMA_DIAGRAM.md  SUMMARY.txt
tracker-platform/tests/: README.md  SUMMARY.md
tracker-platform/tests/common/: fixtures.rs  helpers.rs  mocks.rs  mod.rs
tracker-platform/tests/integration/: test_api.rs  test_auth.rs  test_community.rs  test_search.rs  test_torrent.rs  test_tracker.rs  test_user.rs
tracker-platform/tests/load/: README.md  announce.js  api.js  graphql.js  search.js
(+26 files in other folders)
